# insurance-deploy

./: README.md  pyproject.toml  run_tests_databricks.py  run_tests_databricks2.py  run_tests_databricks3.py
notebooks/: benchmark.py  insurance_deploy_demo.py
src/insurance_deploy/: __init__.py  audit.py  comparison.py  experiment.py  kpi.py  logger.py  registry.py
tests/: conftest.py  test_audit.py  test_comparison.py  test_experiment.py  test_kpi.py  test_logger.py  test_registry.py
