[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-deploy"
version = "0.1.1"
description = "Champion/challenger pricing framework for UK insurance — model registry, quote routing, ENBP audit logging, and statistical promotion tests"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "insurance", "actuarial", "champion-challenger", "pricing",
    "ENBP", "FCA", "model-registry", "loss-ratio", "UK-insurance"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "joblib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-deploy"
Repository = "https://github.com/burning-cost/insurance-deploy"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_deploy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
